# verified-vfl-zkvm-demo

./: Cargo.toml  LICENSE  README.md  index.html  training_results.json
data/: sample_buildings.json
src/: coordinator.rs  dp_sgd.rs  ivc.rs  lib.rs  main.rs  onchain.rs  participant.rs  privacy_budget.rs  types.rs  zkvm_mock.rs
web/: index.html
