[package]
name = "verified-vfl-demo"
version = "0.1.0"
edition = "2021"
authors = ["Xu Pei", "Kurt Pan"]
description = "Prototype demo: Verified Federated Learning with DP-SGD, zkVM Proofs, and On-Chain Privacy Enforcement for Urban Building Maintenance"
license = "MIT"
repository = "https://github.com/user/verified-vfl-demo"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_distr = "0.4"
sha2 = "0.10"
hex = "0.4"
